Fixed parallax issue on mobile device

--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -179,3 +179,9 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    div[data-rellax-speed] {
+        transform: translate3d(0, 0, 0) !important;
+    }
+}
